add Ext Nodejs 2

--- a/package.json
+++ b/package.json
@@ -1,122 +1,10 @@
-/home/projetEmoviz/projetEmoviz
-├─┬ express@4.13.4
-│ ├─┬ accepts@1.2.13
-│ │ ├─┬ mime-types@2.1.10
-│ │ │ └── mime-db@1.22.0
-│ │ └── negotiator@0.5.3
-│ ├── array-flatten@1.1.1
-│ ├── content-disposition@0.5.1
-│ ├── content-type@1.0.1
-│ ├── cookie@0.1.5
-│ ├── cookie-signature@1.0.6
-│ ├─┬ debug@2.2.0
-│ │ └── ms@0.7.1
-│ ├── depd@1.1.0
-│ ├── escape-html@1.0.3
-│ ├── etag@1.7.0
-│ ├─┬ finalhandler@0.4.1
-│ │ └── unpipe@1.0.0
-│ ├── fresh@0.3.0
-│ ├── merge-descriptors@1.0.1
-│ ├── methods@1.1.2
-│ ├─┬ on-finished@2.3.0
-│ │ └── ee-first@1.1.1
-│ ├── parseurl@1.3.1
-│ ├── path-to-regexp@0.1.7
-│ ├─┬ proxy-addr@1.0.10
-│ │ ├── forwarded@0.1.0
-│ │ └── ipaddr.js@1.0.5
-│ ├── qs@4.0.0
-│ ├── range-parser@1.0.3
-│ ├─┬ send@0.13.1
-│ │ ├── destroy@1.0.4
-│ │ ├─┬ http-errors@1.3.1
-│ │ │ └── inherits@2.0.1
-│ │ ├── mime@1.3.4
-│ │ ├── ms@0.7.1
-│ │ └── statuses@1.2.1
-│ ├── serve-static@1.10.2
-│ ├─┬ type-is@1.6.12
-│ │ ├── media-typer@0.3.0
-│ │ └─┬ mime-types@2.1.10
-│ │   └── mime-db@1.22.0
-│ ├── utils-merge@1.0.0
-│ └── vary@1.0.1
-├─┬ mysql@2.10.2
-│ ├── bignumber.js@2.1.4
-│ └─┬ readable-stream@1.1.14
-│   ├── core-util-is@1.0.2
-│   ├── inherits@2.0.1
-│   ├── isarray@0.0.1
-│   └── string_decoder@0.10.31
-├─┬ plotly@1.0.6
-│ └─┬ mkdirp@0.5.1
-│   └── minimist@0.0.8
-└─┬ socket.io@1.4.5
-  ├─┬ debug@2.2.0
-  │ └── ms@0.7.1
-  ├─┬ engine.io@1.6.8
-  │ ├─┬ accepts@1.1.4
-  │ │ ├─┬ mime-types@2.0.14
-  │ │ │ └── mime-db@1.12.0
-  │ │ └── negotiator@0.4.9
-  │ ├── base64id@0.1.0
-  │ ├─┬ engine.io-parser@1.2.4
-  │ │ ├── after@0.8.1
-  │ │ ├── arraybuffer.slice@0.0.6
-  │ │ ├── base64-arraybuffer@0.1.2
-  │ │ ├── blob@0.0.4
-  │ │ ├─┬ has-binary@0.1.6
-  │ │ │ └── isarray@0.0.1
-  │ │ └── utf8@2.1.0
-  │ └─┬ ws@1.0.1
-  │   ├── options@0.0.6
-  │   └── ultron@1.0.2
-  ├─┬ has-binary@0.1.7
-  │ └── isarray@0.0.1
-  ├─┬ socket.io-adapter@0.4.0
-  │ └─┬ socket.io-parser@2.2.2
-  │   ├── benchmark@1.0.0
-  │   ├── component-emitter@1.1.2
-  │   ├── debug@0.7.4
-  │   ├── isarray@0.0.1
-  │   └── json3@3.2.6
-  ├─┬ socket.io-client@1.4.5
-  │ ├── backo2@1.0.2
-  │ ├── component-bind@1.0.0
-  │ ├── component-emitter@1.2.0
-  │ ├─┬ engine.io-client@1.6.8
-  │ │ ├── component-emitter@1.1.2
-  │ │ ├── component-inherit@0.0.3
-  │ │ ├─┬ engine.io-parser@1.2.4
-  │ │ │ ├── after@0.8.1
-  │ │ │ ├── arraybuffer.slice@0.0.6
-  │ │ │ ├── base64-arraybuffer@0.1.2
-  │ │ │ ├── blob@0.0.4
-  │ │ │ ├─┬ has-binary@0.1.6
-  │ │ │ │ └── isarray@0.0.1
-  │ │ │ └── utf8@2.1.0
-  │ │ ├── has-cors@1.1.0
-  │ │ ├─┬ parsejson@0.0.1
-  │ │ │ └─┬ better-assert@1.0.2
-  │ │ │   └── callsite@1.0.0
-  │ │ ├─┬ parseqs@0.0.2
-  │ │ │ └─┬ better-assert@1.0.2
-  │ │ │   └── callsite@1.0.0
-  │ │ ├─┬ ws@1.0.1
-  │ │ │ ├── options@0.0.6
-  │ │ │ └── ultron@1.0.2
-  │ │ ├── xmlhttprequest-ssl@1.5.1
-  │ │ └── yeast@0.1.2
-  │ ├── indexof@0.0.1
-  │ ├── object-component@0.0.3
-  │ ├─┬ parseuri@0.0.4
-  │ │ └─┬ better-assert@1.0.2
-  │ │   └── callsite@1.0.0
-  │ └── to-array@0.1.4
-  └─┬ socket.io-parser@2.2.6
-    ├── benchmark@1.0.0
-    ├── component-emitter@1.1.2
-    ├── isarray@0.0.1
-    └── json3@3.3.2
-
+{
+	"name" : "emoviz",
+	"description" : " Project about study around emotion",
+	"version" , "1.0.0",
+	"devDependencies": {
+		"socket.io": "1.4.5",
+		"mysql" : "2.10.2",
+		"express" : "4.13.4",
+	}
+}
